# p2panda-grpc-replication

./: Cargo.toml  README.md  SPEC.md  build.rs
doggo_build/: Cargo.toml
doggo_build/src/: lib.rs  prost.rs
doggo_replication/: Cargo.toml  SPEC.md  build.rs
doggo_replication/proto/: get_entries.proto  get_log_height_deltas.proto  replication.proto  set_author_aliases.proto
doggo_replication/src/: client.rs  server.rs
doggo_replication/src/qp2p_server/: mod.rs
proto/: author.proto  check_author_alias_uuid_is_valid.proto  get_author_aliases.proto  get_entries.proto  get_entries_delta.proto  new_log_heights_stream.proto  replication.proto
src/: lib.rs  server.rs
src/qp2p_server/: mod.rs
src/quiche_server/: mod.rs
