[package]
name = "p2panda-replication"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "replication-server"
path = "src/server.rs"

#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "helloworld-client"
#path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"
