[package]
name = "doggo_build"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
log = "0.4"
prost = "0.9"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.18"
qp2p = "0.28.5"
prost-build = { version = "0.9" }
proc-macro2 = "1.0.36"
prettyplease = "0.1.7"
syn = "1.0.89"
quote = "1"
